# minimal-meeting-assistant

./: .gitignore  BLUEPRINT.md  README.md  bug_fix.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.cjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: audio.rs  bridge.swift  lib.rs  uploader.rs  whisper_state.rs
src-tauri/src/local_ai/: gemma.rs  mod.rs  whisper.rs
src-tauri/src/meeting_assistant/: meeting_assistant.h  meeting_assistant.swift
src/components/: AboutSection.tsx  Progress.tsx  RecordPopup.tsx  SettingsPage.tsx
src/components/ui/: button.tsx
