[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.13", features = [] }
swift-bridge-build = "0.1"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.0-rc.17", features = [] }
tauri-plugin-log = "2.0.0-rc"
reqwest = { version = "0.11", features = ["multipart", "json", "stream"] }
tokio = { version = "1", features = ["full"] }
hound = "3.4"
dirs = "5"
swift-bridge = "0.1"
whisper-rs = "0.10"
candle-core = { version = "0.4", default-features = false }
candle-transformers = { version = "0.4", default-features = false }
candle-nn = { version = "0.4", default-features = false }
rand = "=0.8.6"
anyhow = "1.0"
tokenizers = "0.15"
futures-util = "0.3"
